--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@testing-library/user-event": "^13.0.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
-    "@types/react": "^18.0.10",
+    "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.18",
     "@types/styled-components": "^5.1.25",
@@ -34,6 +34,7 @@
     "jest-css-modules-transform": "^4.2.0",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "babel-plugin-styled-components": "^1.8.0"
   }
 }
